feature : favorite feature implemented
